# x86

./: .gitignore  CMOS.cpp  CMOS.hpp  CMakeLists.txt  CPU.cpp  CPU.h  DMA.cpp  DMA.hpp  IOBus.cpp  IOBus.hpp  README.md  bios.dump  board.cpp  board.hpp  boot  boot.asm  bus.cpp  bus.hpp  cpu.cpp  cpu.hpp  instruction_defs.hpp  lapic.cpp  lapic.h  log  main.cpp  memory.cpp  memory.h  modrm.cpp  modrm.hpp  op_F0.cpp  op_F2.cpp  ops_0x0.cpp  ops_0x1.cpp  ops_0x2.cpp  ops_0x3.cpp  ops_0x5.cpp  ops_0x7.cpp  ops_0x8.cpp  ops_0x9.cpp  ops_0xA.cpp  (+11 more)
.github/workflows/: c-cpp.yml
fw/: bios.asm  keyboard.asm
hw/: CMOS.cpp  CMOS.hpp  IOBus.cpp  board.cpp  board.hpp  bus.cpp  bus.hpp  cpu.cpp  cpu.hpp  device.hpp  display.cpp  display.hpp  pic.cpp  pic.hpp  ram.cpp  ram.hpp  rom.cpp  rom.hpp
